--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -91,7 +91,7 @@ services:
     build:
         context: ../
         dockerfile: docker/datahub-gms/Dockerfile
-    image: mnexus001:8082/linkedin/datahub-gms:${DATAHUB_VERSION:-head}
+    image: mnexus001:8082/linkedin/datahub-gms:v0.8.23
     hostname: datahub-gms
     container_name: datahub-gms
     ports:
@@ -106,7 +106,7 @@ services:
     build:
       context: ../
       dockerfile: docker/datahub-frontend/Dockerfile
-    image: mnexus001:8082/linkedin/datahub-frontend-react:${DATAHUB_VERSION:-head}
+    image: mnexus001:8082/linkedin/datahub-frontend-react:v0.8.23
     env_file: datahub-frontend/env/docker.env
     hostname: datahub-frontend-react
     container_name: datahub-frontend-react
